docs/apache-airflow-providers-amazon/8.25.0/_sources/_api/airflow/providers/amazon/aws/sensors/redshift_cluster/index.rst.txt
:py:mod:`airflow.providers.amazon.aws.sensors.redshift_cluster`
===============================================================

.. py:module:: airflow.providers.amazon.aws.sensors.redshift_cluster


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.amazon.aws.sensors.redshift_cluster.RedshiftClusterSensor




.. py:class:: RedshiftClusterSensor(*, cluster_identifier, target_status = 'available', aws_conn_id = 'aws_default', deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), **kwargs)


   Bases: :py:obj:`airflow.sensors.base.BaseSensorOperator`

   Waits for a Redshift cluster to reach a specific status.

   .. seealso::
       For more information on how to use this sensor, take a look at the guide:
       :ref:`howto/sensor:RedshiftClusterSensor`

   :param cluster_identifier: The identifier for the cluster being pinged.
   :param target_status: The cluster status desired.
   :param deferrable: Run operator in the deferrable mode.

   .. py:attribute:: template_fields
      :type: Sequence[str]
      :value: ('cluster_identifier', 'target_status')

      

   .. py:method:: poke(context)

      Override when deriving this class.


   .. py:method:: execute(context)

      Derive when creating an operator.

      Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.


   .. py:method:: execute_complete(context, event = None)


   .. py:method:: get_hook()

      Create and return a RedshiftHook.


   .. py:method:: hook()



